--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
+    "@reduxjs/toolkit": "^2.2.3",
+    "@types/node": "^20.14.10",
+    "antd": "^5.19.1",
+    "axios": "^1.6.8",
+    "mockjs": "^1.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.1",
     "react-router-dom": "6.22.2"
   },
   "devDependencies": {
