--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^20.14.10",
     "antd": "^5.19.1",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.11",
     "echarts": "^5.5.0",
     "mockjs": "^1.1.0",
     "react": "^18.3.1",
